--- a/views/onfido.pug
+++ b/views/onfido.pug
@@ -2,15 +2,15 @@ extends layout
 
 block content
   head
-    link(rel='stylesheet', href='https://assets.onfido.com/web-sdk-releases/13.3.1/style.css')
-    script(type='text/javascript', src='https://assets.onfido.com/web-sdk-releases/13.3.1/onfido.min.js')
+    link(rel='stylesheet', href='https://assets.onfido.com/web-sdk-releases/5.12.0/style.css')
+    script(type='text/javascript', src='https://assets.onfido.com/web-sdk-releases/5.12.0/onfido.min.js')
     script(type='text/javascript' src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous")
   body
     .demo-center-text
       #onfido-mount
       div#pbar(class="progress" style="display: none")
         div(class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 75%")
-        p Verifying your identity, please wait... this could take upto 2 minutes.
+        p Verifying your identity, please wait... this should only take a few moments.
       form#submitForm(action='/redirect-rule' method='POST' name="submitForm" class="submitForm")
         input(type="hidden", name="onfidoComplete", value=false)
       script.
@@ -19,7 +19,35 @@ block content
             useModal: false,
             token: '#{sdkToken}',
             containerId: 'onfido-mount',
-            workflowRunId: "#{workflowRunId}",
+            steps: [{
+              type: 'welcome',
+              options: {
+                title: 'Verify your Identity',
+                descriptions: [
+                  'To finish logging in, you will need to verify your identity. It will only take a few moments to complete.'
+                ],
+              },
+            },
+            {
+              type: 'document',
+              options: {
+                useLiveDocumentCapture: true,
+              },
+            },
+            {
+              type: 'face',
+              options: {
+                requestedVariant: 'standard',
+                useMultipleSelfieCapture: true,
+              },
+            },
+            {
+              type: 'complete',
+              options: {
+                message: 'Identity Verification Steps Complete!',
+                submessage: 'Your identity is being verified!',
+              },
+            },],
             onComplete: function (data) {
               var settings = {
                 crossDomain: true,
@@ -33,14 +61,13 @@ block content
                 },
               }
               $.ajax(settings).done(function (response) {
-                console.log(response);
-                if (response.status === 'processing') {
+                if (response.status === 'in_progress') {
                   $('#onfido-mount').hide()
                   $('#pbar').show()
-                  const interval = setInterval(checkStatus, #{idvCheckInterval})
+                  const interval = setInterval(checkStatus, 5000)
                   var timesRun = 0
                   function checkStatus() {
-                    if (timesRun === #{timesRun}) {
+                    if (timesRun === 6) {
                       clearInterval(interval)
                       document.getElementById('submitForm').submit(function () {
                           console.log('submit 1')
@@ -72,26 +99,10 @@ block content
                       } else {
                         timesRun++
                       }
-                    }).fail(function (jqXHR, textStatus) {
-                  if (jqXHR.status === 401) {
-                    alert('Your session has expired due to inactivity -  the verification process!');
-                    window.location.reload();
-                  } else {
-                    console.error('Error:', textStatus);
-                    alert('Error while processing!', textStatus)
-                  }
                     })
                   }
                 }
-              }).fail(function (jqXHR, textStatus) {
-                  if (jqXHR.status === 401) {
-                    alert('Your session has expired due to inactivity. Please restart the verification process!');
-                    window.location.reload();
-                  } else {
-                    console.error('Error:', textStatus);
-                    alert('Error while processing!', textStatus)
-                  }
-            })
+              })
             }
           })
         })
